# SP

./: CMakeLists.txt  README.md  main.cpp
First midterm/: Exercise1.cpp  Exercise10.cpp  Exercise11.cpp  Exercise12.cpp  Exercise13.cpp  Exercise2.cpp  Exercise3.cpp  Exercise4.cpp  Exercise5.cpp  Exercise6.cpp  Exercise7.cpp  Exercise8.cpp  Exercise9.cpp
First midterm EN/: Exercise1.cpp  Exercise10.cpp  Exercise11.cpp  Exercise12.cpp  Exercise13.cpp  Exercise2.cpp  Exercise3.cpp  Exercise4.cpp  Exercise5.cpp  Exercise6.cpp  Exercise7.cpp  Exercise8.cpp  Exercise9.cpp
Lab Exercises/Additional Exercises from Labs/: Exercise1.cpp  Exercise10.cpp  Exercise11.cpp  Exercise12.cpp  Exercise13.cpp  Exercise2.cpp  Exercise3.cpp  Exercise4.cpp  Exercise5.cpp  Exercise6.cpp  Exercise7.cpp  Exercise8.cpp
Lab Exercises/Lab1/: Exercise1.cpp  Exercise2.cpp  Exercise3.cpp
Lab Exercises/Lab2/: Exercise1.cpp  Exercise2.cpp  Exercise3.cpp
Lab Exercises/Lab3/: Exercise1.cpp  Exercise2.cpp  Exercise3.cpp  Exercise4.cpp
Lab Exercises/Lab4/: Exercise1.cpp  Exercise2.cpp  Exercise3.cpp
Lab Exercises/Lab6/: Exercise1.cpp  Exercise2.cpp  Exercise3.cpp
Second midterm/: Exercise1.cpp  Exercise10.cpp  Exercise11.cpp  Exercise12.cpp  Exercise13.cpp  Exercise14.cpp  Exercise15.cpp  Exercise16.cpp  Exercise17.cpp  Exercise18.cpp  Exercise19.cpp  Exercise2.cpp  Exercise20.cpp  Exercise3.cpp  Exercise4.cpp  Exercise5.cpp  Exercise6.cpp  Exercise7.cpp  Exercise8.cpp  Exercise9.cpp
Second midterm EN/: Exercise1.cpp  Exercise10.cpp  Exercise11.cpp  Exercise12.cpp  Exercise13.cpp  Exercise14.cpp  Exercise15.cpp  Exercise16.cpp  Exercise17.cpp  Exercise18.cpp  Exercise19.cpp  Exercise2.cpp  Exercise20.cpp  Exercise21.cpp  Exercise22.cpp  Exercise23.cpp  Exercise24.cpp  Exercise25.cpp  Exercise26.cpp  Exercise27.cpp  Exercise28.cpp  Exercise29.cpp  Exercise3.cpp  Exercise30.cpp  Exercise31.cpp  Exercise32.cpp  Exercise33.cpp  Exercise4.cpp  Exercise5.cpp  Exercise6.cpp  Exercise7.cpp  Exercise8.cpp  Exercise9.cpp
