cmake_minimum_required(VERSION 4.1)
project(oop)

set(CMAKE_CXX_STANDARD 20)

add_executable(oop main.cpp
        "First midterm/Exercise1.cpp"
        "First midterm/Exercise2.cpp"
        "First midterm/Exercise3.cpp"
        "First midterm/Exercise4.cpp"
        "First midterm/Exercise5.cpp"
        "First midterm/Exercise6.cpp"
        "First midterm/Exercise7.cpp"
        "First midterm/Exercise8.cpp"
        "First midterm/Exercise9.cpp"
        "First midterm/Exercise10.cpp"
        "First midterm/Exercise11.cpp"
        "First midterm/Exercise12.cpp"
        "First midterm/Exercise13.cpp"
        "Second midterm/Exercise1.cpp"
        "Second midterm/Exercise2.cpp"
        "Second midterm/Exercise3.cpp"
        "Second midterm/Exercise4.cpp"
        "Second midterm/Exercise5.cpp"
        "Second midterm/Exercise6.cpp"
        "Second midterm/Exercise7.cpp"
        "Second midterm/Exercise8.cpp"
        "Second midterm/Exercise9.cpp"
        "Second midterm/Exercise10.cpp"
        "Second midterm/Exercise11.cpp"
        "Second midterm/Exercise12.cpp"
        "Second midterm/Exercise13.cpp"
        "Second midterm/Exercise14.cpp"
        "Second midterm/Exercise15.cpp"
        "Second midterm/Exercise16.cpp"
        "Second midterm/Exercise17.cpp"
        "Second midterm/Exercise18.cpp"
        "Second midterm/Exercise19.cpp"
        "First midterm EN/Exercise1.cpp"
        "First midterm EN/Exercise2.cpp"
        "First midterm EN/Exercise3.cpp"
        "First midterm EN/Exercise4.cpp"
        "First midterm EN/Exercise5.cpp"
        "First midterm EN/Exercise6.cpp"
        "First midterm EN/Exercise7.cpp"
        "First midterm EN/Exercise8.cpp"
        "First midterm EN/Exercise9.cpp"
        "First midterm EN/Exercise10.cpp"
        "First midterm EN/Exercise11.cpp"
        "First midterm EN/Exercise12.cpp"
        "First midterm EN/Exercise13.cpp"
        "Second midterm EN/Exercise1.cpp"
        "Second midterm EN/Exercise2.cpp"
        "Second midterm EN/Exercise3.cpp"
        "Second midterm EN/Exercise4.cpp"
        "Second midterm EN/Exercise5.cpp"
        "Second midterm EN/Exercise6.cpp"
        "Second midterm EN/Exercise7.cpp"
        "Second midterm EN/Exercise8.cpp"
        "Second midterm EN/Exercise9.cpp"
        "Second midterm EN/Exercise10.cpp"
        "Second midterm EN/Exercise11.cpp"
        "Second midterm EN/Exercise12.cpp"
        "Second midterm EN/Exercise13.cpp"
        "Second midterm EN/Exercise14.cpp"
        "Second midterm EN/Exercise15.cpp"
        "Second midterm EN/Exercise16.cpp"
        "Second midterm EN/Exercise17.cpp"
        "Second midterm EN/Exercise18.cpp"
        "Second midterm EN/Exercise19.cpp"
        "Second midterm EN/Exercise20.cpp"
        "Second midterm EN/Exercise21.cpp"
        "Second midterm EN/Exercise22.cpp"
        "Second midterm EN/Exercise23.cpp"
        "Second midterm EN/Exercise24.cpp"
        "Second midterm EN/Exercise25.cpp"
        "Second midterm EN/Exercise26.cpp"
        "Second midterm EN/Exercise27.cpp"
        "Second midterm EN/Exercise28.cpp"
        "Second midterm EN/Exercise29.cpp"
        "Second midterm EN/Exercise30.cpp"
        "Second midterm EN/Exercise31.cpp"
        "Second midterm EN/Exercise32.cpp"
        "Second midterm EN/Exercise33.cpp"
        "Second midterm/Exercise20.cpp"
        "Lab Exercises/Lab1/Exercise1.cpp"
        "Lab Exercises/Lab1/Exercise2.cpp"
        "Lab Exercises/Lab1/Exercise3.cpp"
        "Lab Exercises/Lab2/Exercise1.cpp"
        "Lab Exercises/Lab2/Exercise2.cpp"
        "Lab Exercises/Lab2/Exercise3.cpp"
        "Lab Exercises/Lab3/Exercise1.cpp"
        "Lab Exercises/Lab3/Exercise2.cpp"
        "Lab Exercises/Lab3/Exercise3.cpp"
        "Lab Exercises/Lab3/Exercise4.cpp"
        "Lab Exercises/Lab4/Exercise1.cpp"
        "Lab Exercises/Lab4/Exercise2.cpp"
        "Lab Exercises/Lab4/Exercise3.cpp"
        "Lab Exercises/Lab6/Exercise1.cpp"
        "Lab Exercises/Lab6/Exercise2.cpp"
        "Lab Exercises/Lab6/Exercise3.cpp"
        "Lab Exercises/Additional Exercises from Labs/Exercise1.cpp"
        "Lab Exercises/Additional Exercises from Labs/Exercise2.cpp"
        "Lab Exercises/Additional Exercises from Labs/Exercise3.cpp"
        "Lab Exercises/Additional Exercises from Labs/Exercise4.cpp"
        "Lab Exercises/Additional Exercises from Labs/Exercise5.cpp"
        "Lab Exercises/Additional Exercises from Labs/Exercise6.cpp"
        "Lab Exercises/Additional Exercises from Labs/Exercise7.cpp"
        "Lab Exercises/Additional Exercises from Labs/Exercise8.cpp"
        "Lab Exercises/Additional Exercises from Labs/Exercise10.cpp"
        "Lab Exercises/Additional Exercises from Labs/Exercise11.cpp"
        "Lab Exercises/Additional Exercises from Labs/Exercise12.cpp"
        "Lab Exercises/Additional Exercises from Labs/Exercise13.cpp"
)
